# umcg

./: .gitignore  README.md  UMCG_IMPLEMENTATION_PROGRESS.md  calibrate_main.py  export_weights_main.py  prepare_c4_main.py  pyproject.toml  requirements-implementation.txt  smoke_main.py  torchrun_main.py  vram_check_main.py
01_gpt_log/: CODEX_UMCG_CODE_AND_EXPERIMENT_DIRECTIVE_2026-07-24.md  UMCG_CONVERSATION_HISTORY_2026-07-24_v3.md
02_codex_log/: conversation_history.md
03_docs/: DATA_CONTRACT.md  HANDOFF_TO_EXPERIMENT_SERVER.md
codex_log/: user_instructions.md  work_log.md
configs/estimator/: russian_roulette_safe_1024.json  russian_roulette_safe_4096.json  russian_roulette_smoke_4096.json
configs/model/: llama_160m_t5_4096.json  llama_350m_t5_4096.json  llama_tiny_smoke_1024.json  llama_tiny_t5_4096.json
docs/: CONFIG_REFERENCE.md  DATA_CONTRACT.md  H100_2GPU_VALIDATION.md  HANDOFF_TO_EXPERIMENT_SERVER.md  SCIENTIFIC_CONTRACT.md  SMOKE_TEST_PROTOCOL.md
results/: README.md
results/full_gradient_3000_20260721T232425_KST_f57ee32/: ANALYSIS_INDEX.md
scripts/: compare_350m_metrics.py  compare_validation_states.py  inspect_umcg_env.sh  run_cpu_tests.sh  run_external_validation.sh  run_gpu0_smoke.sh  run_gpu1_smoke.sh  run_h100_2gpu_validation.sh
src/umcg/: __init__.py  config.py  precision.py  rng.py
src/umcg/cli/: __init__.py  (+6 more)
tests/: conftest.py
tests/distributed/: global_gradient_worker.py
tests/fixtures/: c4_tiny_rows.jsonl
tests/integration/: test_model_equivalence.py  test_smoke_entrypoint.py
tests/unit/: test_attention_resolver.py  test_calibration.py  test_checkpoint_manifest.py  test_config_contract.py  test_deepspeed_config.py  test_document_chunks.py  test_global_objective.py  test_local_raw_c4.py  test_optimizer_scheduler.py  test_precision.py  test_prepare_c4.py  test_public_interface.py  test_stream_state.py  test_validation_comparison.py
(+88 files in other folders)
