[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "umcg-pretraining"
version = "0.1.0"
description = "Independent production pretraining with Unbiased Multi-Resolution Context Gradients"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.8,<4.9",
  "huggingface-hub>=1.24,<1.25",
  "numpy>=2.5,<2.6",
  "safetensors>=0.8,<0.9",
  "torch>=2.11,<2.12",
  "transformers>=5.14,<5.15",
  "wandb>=0.28,<0.29",
]

[project.optional-dependencies]
distributed = [
  "deepspeed>=0.19.2,<0.20",
  "ninja>=1.13,<1.14",
]
low-precision = [
  "torchao>=0.17,<0.18",
]
dev = [
  "pytest>=9.1,<9.2",
  "ruff>=0.15,<0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
